welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: not found: value Motfi
override def run() {Motfi()
                    ^